projects/gitops-workflow-lab/apps/overlays/prod/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: podinfo
  namespace: platform-prod
spec:
  rules:
    - host: podinfo-prod.local
